--- a/tutorial_TeX/RB_GTST_Tutorial/RB_GTST_Tutorial_content.tex
+++ b/tutorial_TeX/RB_GTST_Tutorial/RB_GTST_Tutorial_content.tex
@@ -1,5 +1,6 @@
 \input{\ResourcePath RB_GTST_Tutorial_content_no_bib}
 
 
-\bibliographystyle{mbe}
-\bibliography{\ResourcePath refs}
+
+\bibliographystyle{sysbio}
+\bibliography{\GlobalResourcePath refs}
