--- a/tutorial_TeX/RB_MCMC_Tutorial/RB_MCMC_Tutorial_content.tex
+++ b/tutorial_TeX/RB_MCMC_Tutorial/RB_MCMC_Tutorial_content.tex
@@ -499,4 +499,4 @@ There are additional bonsai reports for more complex models demonstrating a wide
 
 
 \bibliographystyle{sysbio}
-\bibliography{\ResourcePath refs}
+\bibliography{\GlobalResourcePath refs}
