--- a/tutorial_TeX/RB_Partition_Tutorial/RB_Partition_Tutorial.tex
+++ b/tutorial_TeX/RB_Partition_Tutorial/RB_Partition_Tutorial.tex
@@ -12,7 +12,7 @@
 \textbf{\LARGE Phylogenetic Inference using \RevBayes}\\\vspace{2mm}
 \textbf{\it{\Large Partitioned data analyses}}\\\vspace{2mm}
 \vspace{1cm}
-{\Large Brian R.~Moore, Michael J.~Landis and Sebastian H{\"o}hna}
+{\Large Sebastian H{\"o}hna, Michael J.~Landis and Brian R.~Moore}
 \vspace{1cm}
 \end{center}
 
