more structural changes

--- a/tutorial_TeX/RB_PhyloMultivariateComparative_Tutorial/RB_PhyloMultivariateComparative_Tutorial_content.tex
+++ b/tutorial_TeX/RB_PhyloMultivariateComparative_Tutorial/RB_PhyloMultivariateComparative_Tutorial_content.tex
@@ -963,4 +963,4 @@ what could be the underlying biological cause?
 %More ambitiously, the \emph{total evidence dating} method \citep{Ronquist:2012ea} could be extended so as to now include, not just discrete morphological characters, but also quantitative traits, for both extant and extinct taxa. Morphological characters would be modeled using discrete $M_k$ models, while quantitative traits would be described by multivariate Brownian processes, just as in the previous sections.
 
 \bibliographystyle{sysbio}
-\bibliography{\ResourcePath refs}
+\bibliography{\GlobalResourcePath refs}
